@@ -320,3 +320,9 @@ dont_end_units_turn_after_bombarding_barricade = false
 ; Allows land units to bombard aircraft and naval units in cities
 ; This does not override the immunity of aircraft vs bombardment, if that option is also activated.
 remove_land_artillery_target_restrictions = false
+
+; Allows tile improvements on a tile with an occupied airfield to be destroyed by bombardment, not including the airfield itself. For example, under
+; the standard game rules, if you bombard a tile with a road, airfield, and fighter on it, you will do no damage because the attack will target the
+; fighter which is invulnerable (aircraft in an airfield cannot be damaged by bombardment). This option allows such an attack to bypass the fighter
+; and hit the tile instead, as long as that tile has an improvement other than the airfield.
+allow_bombard_of_other_improvs_on_occupied_airfield = false
